--- a/src/pages/chats/chats.html
+++ b/src/pages/chats/chats.html
@@ -1,25 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Messenger</title>
-    <link rel="stylesheet" href="/src/styles.scss" />
-  </head>
-  <body>
-    <div class="messenger">
-        <div class="messenger__list">
-            <div class="messenger__header">
-                
-            </div>
-            <div class="messenger__item">
 
-            </div>
-        </div>
-        <div class="messenger__chat">
-ff
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Messenger</title>
+  <link rel="stylesheet" href="/src/styles.scss" />
+</head>
+
+<body>
+  <div class="messenger">
+    <div class="messenger__list">
+      <div class="messenger__header">
+        {{> search/search }}
+      </div>
+
+      <div class="messenger__item">
+        {{> chat-card/chat-card }}
+      </div>
+      <div class="messenger__item">
+        {{> chat-card/chat-card }}
+      </div>
+      <div class="messenger__item">
+        {{> chat-card/chat-card }}
+      </div>
     </div>
-  </body>
+    <div class="messenger__chat">
+      ff
+    </div>
+  </div>
+</body>
+
 </html>
