--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,27 +1,13 @@
-<!doctype html>
-<html lang="ru">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Вход</title>
-  <link rel="stylesheet" href="/styles.scss" />
-</head>
-
-<body>
-  <main>
-    <form class="login-form">
-      {{#> card/card}}
-        <h1 class="login-form_card_header">Messenger</h1>
-        {{> input/input type="text" name="login" placeholder="Логин" }}
-        {{> input/input type="password" name="password" placeholder="Пароль" }}
-        <div class="login-form_buttons">
-          {{> button/button label="Войти" primary="true" }}
-          {{> button/button label="Нет аккаунта?" }}
-        </div>
-      {{/ card/card}}
-    </form>
-  </main>
-</body>
-
-</html>
+{{#> page/page title="Вход"}}
+  <form class="login-form">
+    {{#> card/card}}
+      <h1 class="login-form_card_header">Messenger</h1>
+      {{> input/input type="text" name="login" placeholder="Логин" }}
+      {{> input/input type="password" name="password" placeholder="Пароль" }}
+      <div class="login-form_buttons">
+        {{> button/button label="Войти" primary="true" }}
+        {{> button/button label="Нет аккаунта?" }}
+      </div>
+    {{/ card/card}}
+  </form>
+{{/ page/page}}
