404 and 500 pages were added; Page layout was changed.

--- a/src/pages/create-account/create-account.html
+++ b/src/pages/create-account/create-account.html
@@ -1,5 +1,5 @@
 {{#> page/page title="Регистрация"}}
-    <form class="account-form">
+    <form>
         {{#> card/card}}
             <h1 class="account-form_card_header">Регистрация</h1>
             {{> input/input type="email" name="email" placeholder="Почта" }}
