--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,5 +1,5 @@
 {{#> page/page title="Вход"}}
-  <form class="login-form">
+  <form>
     {{#> card/card}}
       <h1 class="login-form_card_header">Messenger</h1>
       {{> input/input type="text" name="login" placeholder="Логин" }}
