--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,12 @@
         <li>
           <a href="pages/profile/profile.html">Профиль</a>
         </li>
+        <li>
+          <a href="pages/404.html">Страница 404</a>
+        </li>
+        <li>
+          <a href="pages/500.html">Страница 500</a>
+        </li>
       </ul>
     </nav>
   </main>
