Readme was updated.

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
           <a href="pages/profile/profile.html">Профиль</a>
         </li>
         <li>
+          <a href="pages/404.html">Чат</a>
+        </li>
+        <li>
           <a href="pages/404.html">Страница 404</a>
         </li>
         <li>
